<resources>
    <string name="app_name">Penjual Tipall</string>
    <string name="Narasi_Masuk">Kontrol barang dagang mu sekarang bisa lebih mudah!</string>
    <string name="Masuk">Masuk</string>
    <string name="alamat_surel">Alamat Surel</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya Akun?</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="narasi_cekemail">Email kamu sudah terdaftar, silahkan lengkapi berkas pendaftaran melalui admin untuk mulai berjualan!</string>
    <string name="sudah_verifikasi">Sudah Verifikasi?</string>
    <string name="title_activity_inti">MainActivity</string>
    <string name="title_activity_cadangan">MainActivity</string>
    <string name="barang">Barang</string>
    <string name="transaksi">Transaksi</string>
    <string name="profil">Profil</string>
    <string name="profilku">Profil Saya</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="akun">Akun</string>
    <string name="riwayat">Riwayat</string>
    <string name="lokasi_usaha_anda">Lokasi Usaha Anda</string>
    <string name="tombol_next">tombol next</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="skor_kamu">Skor Kamu</string>
    <string name="yuk_transaksi_lagi">Yuk Transaksi Lagi!</string>
    <string name="ketentuan_layanan">Ketentuan Layanan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="beri_rating">Beri Rating</string>
    <string name="v_1_0_1">v 1.0.1</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="ganti_foto">Ganti Foto</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="nomor_belum_diverifikasi">Nomor belum diverifikasi.</string>
    <string name="nomor_telah_diverifikasi">Nomor telah diverifikasi.</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="logo">Logo</string>
    <string name="contdes">TODO</string>
    <string name="statistik_penjualan">Statistik Penjualan</string>
    <string name="judul_barang">Judul Barang</string>
    <string name="deskripsi_barang_yang_dijual">Deskripsi barang yang dijual</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="ke"><![CDATA[>]]></string>
    <string name="harga_jual_barang">Harga Jual Barang</string>
    <string name="tersisa">Tersisa</string>
    <string name="_123">123</string>
    <string name="barang_tersedia">Barang Tersedia</string>
    <string name="_4_5">4.5</string>
    <string name="_0_96_km">0.96 km</string>
    <string name="tersedia">Tersedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alamat_usaha">Alamat Usaha</string>
    <string name="nama_usaha">Nama Usaha</string>
    <string name="usaha_saya">Usaha Saya</string>
    <string name="cari_barang">Cari Barang</string>
    <string name="belum_dibayar">Belum Dibayar</string>
    <string name="berlangsung">Berlangsung</string>
    <string name="tawaran">Tawaran</string>
    <string name="permintaan_saya">Permintaan Saya</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="buka_kamera">Buka Kamera</string>
    <string name="pilih_file">Pilih File</string>
    <string name="tambah_profil_usaha">Tambah Profil Usaha</string>
    <string name="lokasi_usaha">Lokasi Usaha</string>
    <string name="edit_profil_usaha">Edit Profil Usaha</string>
    <string name="buat_permintaan">Buat Permintaan</string>
    <string name="dari">/</string>
    <string name="jumlah_transaksi_per_bulan">Jumlah Transaksi per Bulan</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="_0">0</string>
    <string name="kirim_permintaan">Kirim Permintaan</string>
    <string name="dengan_mengirimkan_permintaan_barang_anda_setuju_untuk_menunjukan_nomor_telepon_anda">Dengan mengirimkan permintaan barang, Anda setuju untuk menunjukan nomor telepon anda.</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="total_transaksi">Total Transaksi</string>
    <string name="rp_0">Rp. 0</string>
    <string name="harga_barang_x_jumlah">Harga Barang x Jumlah</string>
    <string name="detail_tawaran">Detail Tawaran</string>
    <string name="tolak">Tolak</string>
    <string name="terima">Terima</string>
    <string name="dengan_memilih_tombol_terima_anda_setuju_memberikan_nomor_telepon_anda">Dengan memilih tombol terima, anda setuju memberikan nomor telepon anda.</string>
    <string name="transaksi_berlansung">Transaksi Berlansung</string>
    <string name="selesai">Selesai</string>
    <string name="pastikan_anda_telah_menyelesaikan_sebelum_mengklik_selesai_dan_jangan_lupa_melunasi_tagihan_transaksi">Pastikan anda telah menyelesaikan sebelum mengklik Selesai. Dan jangan lupa melunasi tagihan transaksi.</string>
    <string name="status_transaksi">Status Transaksi</string>
    <string name="tanggal_transaksi">Tanggal Transaksi</string>
    <string name="kode_transaksi">Kode Transaksi</string>
    <string name="kasih_rating_buat_distributor">Kasih Rating buat Distributor?</string>
    <string name="segera_lunasi_transaksi_anda">Segera Lunasi Transaksi anda.</string>
    <string name="menunggu_konfirmasi">Menunggu Konfirmasi</string>
    <string name="waktu_dimulai">Waktu Dimulai</string>
    <string name="total_tagihan">Total tagihan</string>
    <string name="hubungi">Hubungi</string>
    <string name="petunjuk_arah">Petunjuk Arah</string>
    <string name="tidak_ada_barang_tersedia_di_sekitar_anda">Tidak ada barang tersedia di sekitar anda</string>
    <string name="yay_tidak_ada_transaksi_yang_belum_dibayar">Yay! Tidak ada transaksi yang belum dibayar</string>
    <string name="transaksi_hutang">Transaksi Hutang</string>
    <string name="detail_barang">Detail Barang</string>
    <string name="ups_ada_yang_salah_nih_coba_cek_koneksi_kamu_dan_swipe_down_untuk_memuat_ulang">Ups! Ada yang salah nih. Coba cek koneksi kamu dan swipe down untuk memuat ulang</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="tandai_selesai">Tandai Selesai</string>
    <string name="kamu_belum_membuat_permintaan_barang_hari_ini">Kamu belum membuat permintaan barang hari ini.</string>
    <string name="urutkan_berdasarkan_waktu">Urutkan berdasarkan waktu</string>
    <string name="buat_transaksi_baru">Buat Transaksi Baru</string>
    <string name="kamu_tidak_punya_penawaran">Kamu tidak punya penawaran</string>
    <string name="yakin_menolak_transaksi_ini">Yakin Menolak Transaksi Ini?</string>
    <string name="yakin">Yakin</string>
    <string name="batal">Batal</string>
    <string name="tidak_ada_transaksi_berlangsung_hari_ini_ayo_buat_transaksi">Tidak ada transaksi berlangsung hari ini. Ayo buat Transaksi!</string>
    <string name="lihat_detail_tawaran">Lihat Detail Tawaran</string>
    <string name="barang_terjual">Barang Terjual</string>
    <string name="barang_rusak_expired">Barang Rusak/Expired</string>
    <string name="_3_item">3 Item</string>
    <string name="buat_laporan">Buat Laporan</string>
    <string name="jenis_laporan">Jenis Laporan</string>
</resources>