<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_belumdibayar"
    app:cardElevation="2dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/cardview_horizontal_margin">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/colorAccent"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/imageBarang"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/_0"
                android:src="@drawable/ic_icon_profil"
                android:visibility="visible"
                app:tint="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/imageBarangFix"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/_0"
                android:visibility="invisible"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/cv"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/namaBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/judul_barang"
                android:textColor="@color/textDiAwan"
                android:textSize="@dimen/font_standar"/>

            <TextView
                android:id="@+id/namaUsaha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/font_kecil"
                android:text="@string/nama_usaha"
                android:fontFamily="@font/poppins"/>

            <TextView
                android:id="@+id/waktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waktu_dimulai"
                android:textSize="@dimen/font_kecil"
                android:textColor="@color/textGrey"
                android:fontFamily="@font/poppins"/>

            <TextView
                android:id="@+id/tagihan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_tagihan"
                android:textColor="@color/red"
                android:textSize="@dimen/font_kecil"
                android:fontFamily="@font/poppins_semibold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_icon_barang"
                app:tint="@color/colorPrimaryDark"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/contdes" />

            <TextView
                android:id="@+id/jumlahStok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/_123"
                android:gravity="center_vertical"
                android:textAlignment="gravity"
                android:layout_marginEnd="12dp"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/font_kecil" />

            <TextView
                android:id="@+id/jarak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/_0_96_km"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/font_kecil"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                app:drawableTint="@color/red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button"
            android:orientation="horizontal"
            android:padding="@dimen/cardview_horizontal_margin"
            android:paddingTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/contdes"
                android:src="@drawable/ic_whatsapp"
                app:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_vertical"
                android:paddingHorizontal="8dp"
                android:text="@string/hubungi"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_standar" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>