<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_penjual"
    app:cardElevation="2dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageBarang"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/v_1_0_1" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageBarang">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/cardview_horizontal_margin">

                <ImageView
                    android:id="@+id/imagePenjual"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:backgroundTint="@color/lightGrey"
                    android:contentDescription="@string/v_1_0_1"
                    android:src="@drawable/ic_foto_profil"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imagePenjual"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/namaBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/judul_barang"
                        android:textColor="@color/textDiAwan"
                        android:textSize="@dimen/font_standar" />

                    <TextView
                        android:id="@+id/namaPemilik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/nama_lengkap"
                        android:textColor="@color/textGrey"
                        android:textSize="@dimen/font_kecil" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/HargaBarang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:text="@string/harga_barang"
                            android:fontFamily="@font/poppins"
                            android:textSize="@dimen/font_kecil"
                            android:textColor="@color/red"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textGrey"
                            android:textSize="@dimen/font_kecil"
                            android:layout_marginEnd="4dp"
                            android:text="@string/ke"
                            android:fontFamily="@font/poppins"/>

                        <TextView
                            android:id="@+id/HargaJualBarang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:text="@string/harga_jual_barang"
                            android:fontFamily="@font/poppins"
                            android:textSize="@dimen/font_kecil"
                            android:textColor="@color/red"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_icon_barang"
                        app:tint="@color/colorPrimaryDark"
                        android:contentDescription="@string/contdes" />

                    <TextView
                        android:id="@+id/stok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/font_kecil"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/tersedia"
                        android:textColor="@color/textDiAwan"
                        android:textSize="@dimen/font_kecil"/>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_baseline_location_on_24"
                        app:tint="@color/red"
                        android:contentDescription="@string/contdes" />

                    <TextView
                        android:id="@+id/jarak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/_0_96_km"
                        android:textColor="@color/textDiAwan"
                        android:textSize="@dimen/font_kecil"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>